--- a/felipe_site/templates/produtos.html
+++ b/felipe_site/templates/produtos.html
@@ -8,6 +8,8 @@
 {% for produto in produtos %}
 <h2>{{ produto.nome }}</h2>
 <p>{{produto.descricao}}</p>
+<p>{{produto.preco}}</p>
+<img src="{{produto.imagem}}" alt="">
 <a href="/produtos/{{ produto.nome}}">Ver produto</a>
 {% endfor %}
 {% endblock %}
